[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
config = "0.11"
actix-web = "4.13.0"
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full", "extra-traits", "parsing"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
env_logger = "0.9"
log ="0.4"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros", 
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12" # Or whatever the current stable release is
